<?xml version="1.0"?>
<package>
  <name>ford_can</name>
  <version>1.0.0</version>
  <description>Reads stats from a Ford car over CANbus.</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
